--- a/esercitazione_19_2_2025_(casa)/esercitazione_19_2_2025_(casa)/index.html
+++ b/esercitazione_19_2_2025_(casa)/esercitazione_19_2_2025_(casa)/index.html
@@ -4,53 +4,67 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Artist Playlist</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css"> <!-- Collegamento al file CSS -->
 </head>
 <body>
+    <!-- Sezione per la prima canzone -->
     <div class="song">
         <div class="song-info">
-            <h1 id="canzone1"></h1>
-            <img id="immagine1" alt="Canzone 1" />
+            <h1 id="canzone1"></h1> <!-- Titolo della canzone -->
+            <img id="immagine1" alt="Canzone 1" /> <!-- Immagine della canzone -->
             <div>
-                <button id="info1">Info</button>
+                <button id="info1">Info</button> <!-- Pulsante per visualizzare informazioni -->
             </div>
-            <div id="informazioni1"></div>
-            <button id="play1" onclick="riproduci1()">Play</button>
+            <div id="informazioni1"></div> <!-- Sezione per le informazioni della canzone -->
+            <button id="play1" onclick="riproduci1()">Play</button> <!-- Pulsante per avviare la riproduzione -->
         </div>
         <div class="song-video">
-            <iframe width="500" height="300" id = "video1" title="ALFA - Vabbè ciao (Official Video)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        </div>
-    </div>
-    <div class="song">
-        <div class="song-info">
-            <h1 id="canzone2"></h1>
-            <img id="immagine2" alt="Canzone 2" />
-            <div>
-                <button id="info2">Info</button>
-            </div>
-            <div id="informazioni2"></div>
-            <button id="play2" onclick="riproduci2()">Play</button>
-        </div>
-        <div class="song-video">
-            <iframe width="500" height="300" id = "video2" title="ALFA - Vabbè ciao (Official Video)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="500" height="300" id="video1" title="ALFA - Vabbè ciao (Official Video)" 
+            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+            gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" 
+            allowfullscreen></iframe> <!-- Video della canzone -->
         </div>
     </div>
 
+    <!-- Sezione per la seconda canzone -->
     <div class="song">
         <div class="song-info">
-            <h1 id="canzone3"></h1>
-            <img id="immagine3" alt="Canzone 3" />
+            <h1 id="canzone2"></h1> <!-- Titolo della canzone -->
+            <img id="immagine2" alt="Canzone 2" /> <!-- Immagine della canzone -->
             <div>
-                <button id="info3">Info</button>
+                <button id="info2">Info</button> <!-- Pulsante per visualizzare informazioni -->
             </div>
-            <div id="informazioni3"></div>
-            <button id="play3" onclick="riproduci3()">Play</button>
+            <div id="informazioni2"></div> <!-- Sezione per le informazioni della canzone -->
+            <button id="play2" onclick="riproduci2()">Play</button> <!-- Pulsante per avviare la riproduzione -->
         </div>
         <div class="song-video">
-            <iframe width="500" height="300" id = "video3" title="ALFA - Vabbè ciao (Official Video)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="500" height="300" id="video2" title="ALFA - Vabbè ciao (Official Video)" 
+            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+            gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" 
+            allowfullscreen></iframe> <!-- Video della canzone -->
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <!-- Sezione per la terza canzone -->
+    <div class="song">
+        <div class="song-info">
+            <h1 id="canzone3"></h1> <!-- Titolo della canzone -->
+            <img id="immagine3" alt="Canzone 3" /> <!-- Immagine della canzone -->
+            <div>
+                <button id="info3">Info</button> <!-- Pulsante per visualizzare informazioni -->
+            </div>
+            <div id="informazioni3"></div> <!-- Sezione per le informazioni della canzone -->
+            <button id="play3" onclick="riproduci3()">Play</button> <!-- Pulsante per avviare la riproduzione -->
+        </div>
+        <div class="song-video">
+            <iframe width="500" height="300" id="video3" title="ALFA - Vabbè ciao (Official Video)" 
+            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+            gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" 
+            allowfullscreen></iframe> <!-- Video della canzone -->
+        </div>
+    </div>
+
+    <script src="script.js"></script> <!-- Collegamento al file JavaScript -->
 </body>
 </html>
+
